Sun Jul 13 16:44:56 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (struct rb_call_info_struct): improve packing

Sun Jul 13 15:53:25 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (struct rb_iseq_struct): stack_max is uint32_t

Sun Jul 13 10:56:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_broken_backtrace): exit with failure
	  normally, no needs to abort.  [ruby-core:63678] [Bug #10008]

Sat Jul 12 15:10:22 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_record_method_missing): correct
	  fields Hash key.

Sat Jul 12 04:17:40 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/net/smtp.rb (Net::SMTP#data): enable buffering while
	  'data' send for optimizing Net::SMTP#send_message.
	  [ruby-dev:48329] [misc #9981]
	  patch by Masahiro Tomita.

Sat Jul 12 01:13:45 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* test/ruby/envutil.rb (assert_no_memory_leak): On Solaris 9 or later,
	  if possible, execute child ruby with environment variables
	  LD_PRELOAD=libumem.so UMEM_OPTIONS="backend=mmap". With these
	  variables, freed memory is immediately returned to the OS.
	  [Bug #10020] [ruby-dev:48391]

Fri Jul 11 20:49:10 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE_RECORD class to support
	  VT_RECORD OLE variables.

Fri Jul 11 17:15:08 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/abbrev.rb: remove executable.

Fri Jul 11 16:45:39 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/fileutils.rb: handle ENOENT error with symlink targeted to
	  non-exists file. [ruby-dev:45933] [Bug #6716]

Fri Jul 11 15:59:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* array.c: Clarify documentation for Array#insert.
	  [ruby-core:62934] [Bug #9901]

Fri Jul 11 15:39:36 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* io.c: Improve Documentation by @dapplebeforedawn.
	  [fix GH-658] [ruby-core:63579] [Bug #10012]
