@@ -1,3 +1,8 @@
+Sun Jul 13 17:25:50 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* ext/dbm/dbm.c: fix wrong arguments in GetDBM2 macro by @v2e4lisp.
+	  [fix GH-655]
+
 Sun Jul 13 16:44:56 2014  Eric Wong  <e@80x24.org>
 
 	* vm_core.h (struct rb_call_info_struct): improve packing
